--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@sentry/nextjs": "^7.105.0",
@@ -21,12 +22,14 @@
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.4.1",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.163.0",
