--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
