--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-github-calendar": "^4.1.5",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
     "resend": "^3.2.0",
