--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.7.0",
