feat: Add lazy loading for images in layout and VisitorData components

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postbuild": "next-sitemap",
     "deploy": "vercel --prod"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "next-sitemap": "^4.2.3",
     "react-github-calendar": "^4.1.5",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
