--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.12.0",
+    "@next/swc-darwin-arm64": "^14.2.16",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@sentry/nextjs": "^7.105.0",
@@ -28,10 +29,10 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "next": "14.1.4",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next-sitemap": "^4.2.3",
     "react-github-calendar": "^4.1.5",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
