--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.163.0",
     "three-globe": "^2.31.0",
+    "ua-parser-js": "^2.0.2",
     "vercel": "^34.0.0"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
+    "@types/ua-parser-js": "^0.7.39",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
