--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^9.105.4",
-    "@react-three/fiber": "^8.16.2",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@tabler/icons-react": "^3.1.0",
     "@types/three": "^0.177.0",
     "@vercel/analytics": "^1.3.1",
@@ -39,7 +39,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "next": "14.1.4",
+    "next": "^15.3.5",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -53,7 +53,7 @@
     "three": "^0.177.0",
     "three-globe": "^2.29.0",
     "ua-parser-js": "^2.0.2",
-    "vercel": "^34.0.0"
+    "vercel": "^44.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -63,7 +63,7 @@
     "@types/ua-parser-js": "^0.7.39",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "^15.3.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
