--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.7.0",
