--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^9.0.0-beta.6",
+    "@react-three/fiber": "^9.0.0-beta.1",
     "@tabler/icons-react": "^3.1.0",
     "@types/three": "^0.177.0",
     "@vercel/analytics": "^1.3.1",
@@ -43,8 +43,8 @@
     "next": "^15.3.5",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-github-calendar": "^4.1.5",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
@@ -58,8 +58,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@types/react-lottie": "^1.2.10",
     "@types/ua-parser-js": "^0.7.39",
     "autoprefixer": "^10.0.1",
