--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^9.0.0-beta.6",
-    "@react-three/fiber": "^9.0.0-beta.1",
+    "@react-three/drei": "^9.120.0",
+    "@react-three/fiber": "^9.0.0",
     "@tabler/icons-react": "^3.1.0",
     "@types/three": "^0.177.0",
     "@vercel/analytics": "^1.3.1",
