--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "next": "15.3.8",
+    "next": "^16.1.6",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-github-calendar": "^4.1.5",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
